fixed alignment issues on welcome

--- a/client/stylesheets/welcome.css
+++ b/client/stylesheets/welcome.css
@@ -1,19 +1,22 @@
 
+body *{
+    position:relative;
+}
+
 div#page-welcome {
 
 }
 
 div#page-welcome div#container {
-	position:absolute;
-	right:10px;
+	height: 100%
 }
 
 div#page-welcome .common {
 	opacity: 0.7;
-	border-radius: 6px;
 	background-color: #FFFF26;
 	font-weight: bold;
 	margin-bottom: 150px;
+	right: 30px;
 }
 
 div#page-welcome div#topText {
@@ -23,6 +26,7 @@ div#page-welcome div#topText {
 	padding: 12px;
 	font-size: 1.7rem;
 	color: #000000;
+	position:absolute;
 }
 
 div#page-welcome div#middleText {
@@ -32,8 +36,9 @@ div#page-welcome div#middleText {
 	font-size: 1.7rem;
 	color: #000000;
 	text-align: center;
-	/*position: absolute;*/
-	right: 0px;
+	position: absolute;
+	top: 150px;
+	border-radius: 6px;
 }
 
 div#page-welcome #txtMinutes {
@@ -51,7 +56,7 @@ div#page-welcome #txtMinutes {
 
 div#page-welcome #btnGetStarted {
 	position: absolute;
-	right: 0px;
+	bottom:20px;
 }
 
 
